fixed overlap when landing

--- a/css/master.css
+++ b/css/master.css
@@ -5,7 +5,7 @@ body {
 
 .container {
   width:90vw;
-  height:350px;
+  height:360px;
   margin: 10% auto;
   background: #999;
   border-radius: 1em;
